changed buttons hover

--- a/html/signIn.html
+++ b/html/signIn.html
@@ -31,23 +31,30 @@
                 </div>
             </div>
         </nav>
-        <div class="formSignIn">
-            <form>
-                <legend class="mb-4">Войдите в свой профиль</legend>
-                <div class="mb-3">
-                    <input type="email" placeholder="Логин или e-mail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-5">
-                    <input type="password" placeholder="Пароль" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-5">
-                    <u>Не помню пароль</u>
-                </div>
-                <button type="submit" class="buttonSignIn">Выслать код-пароль</button>
-                <div class="noRegistaration">
-                    Еще нет профиля? <u>Зарегистрируйтесь!</u>
-                </div>
-            </form>
+        <div class="signInBlock">
+            <div class="formSignIn">
+                <form>
+                    <legend class="mb-4">Войдите в свой профиль</legend>
+                    <div class="mb-3">
+                        <input type="email" placeholder="Логин или e-mail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-4">
+                        <input type="password" placeholder="Пароль" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-4">
+                        <u>Не помню пароль</u>
+                    </div>
+                    <button type="submit" class="buttonSignIn">Выслать код-пароль</button>
+                    <div class="noRegistaration">
+                        Еще нет профиля? <u>Зарегистрируйтесь!</u>
+                    </div>
+                </form>
+            </div>
+            <div class="blockWithImage">
+                <h1>Узнавайте новое c Edusturm</h1>
+                <p>Авторизуйтесь, чтобы начать заниматься</p>
+                <img src="../images/signInImage.png" alt="Idea">
+            </div>
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
