added page of lessons

--- a/html/userCourses.html
+++ b/html/userCourses.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-        <h1 class="mb-5 mt-5"><b>Рекомендованные курсы</b></h1>
+        <h1 class="mb-5 mt-5"><b>Доступные курсы</b></h1>
 
         <div class="courseFaces">
             <div class="courseFace">
