--- a/html/userLesson.html
+++ b/html/userLesson.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Урок</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/css/buttons.css">
+    <link rel="stylesheet" href="../src/css/userLesson/main.css">
+    <link rel="stylesheet" href="../src/css/userLesson/homework.css">
 </head>
 
 <body>
@@ -37,20 +40,90 @@
                 <h1>Сторителлинг. Интро недели</h1>
                 <p>00:06:39</p>
             </div>
+            <img src="../images/video.png" class="img-fluid w-100" alt="video">
             <div class="descriptionLesson">
-
+                <div class="description">
+                    <div class="descriptionTitle">
+                        Описание
+                    </div>
+                    <div class="descriptionText">
+                        В этом уроке поговорим о графическом редакторе, лалалал алалал лалалалалаалал алалалл алалалалалалла лалалалалалалалала ллалалалалалалал аллалалал алалалалл алалалалалал аллалалалл алаллалалаала лаллалалла лалла лала.
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="descriptionTitle">
+                        Таймкоды
+                    </div>
+                    <div class="descriptionText">
+                        <div>
+                            00.05: Что такое Photoshop и его функции
+                        </div>
+                        <div>
+                            3.50: Разбираем интерфейс
+                        </div>
+                        <div>
+                            8.43: Что такое Photoshop и его функции
+                        </div>
+                        <div>
+                            14.00: Разбираем интерфейса
+                        </div>
+                        <div>
+                            19.15: Разбираем интерфейс
+                        </div>
+                        <div>
+                            20.10: Разбираем интерфейс
+                        </div>
+                    </div>
+                </div>
             </div>
-            <img src="../images/video.png" alt="video">
+
         </div>
     </div>
     <div class="homeworkDescription">
         <div class="container">
-
+            <div class="descriptionLesson">
+                <div class="description">
+                    <div class="descriptionTitleHomework">
+                        Домашнее задание
+                    </div>
+                    <div class="descriptionTextHomework">
+                        Выбрать одну из предложенных историй для проекта блаблабла.
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="descriptionTitle">
+                        Описание
+                    </div>
+                    <div class="descriptionTextHomework">
+                        Выбрать одну из предложенных историй для проекта блаблабла.
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="homeworkSend">
         <div class="container">
-
+            <div class="formHomework">
+                <form>
+                    <legend class="headForm">Загрузка ДЗ</legend>
+                    <div class="mb-3">
+                        <input class="form-control" placeholder="Комментарии к работе" id="comment" aria-describedby="emailHelp">
+                    </div>
+                    <div class="linkInput">
+                        <input placeholder="Ссылка" class="form-control" id="link">
+                    </div>
+                    <button type="button" class="buttonSignIn" name="button">Отправить на проверку</button>
+                </form>
+                <div class="files">
+                    <div class="headFiles">
+                        <h2>Файлы</h2>
+                        <button type="button" class="add" name="button">Добавить</button>
+                    </div>
+                    <div class="filesText">
+                        После отправки работа появится здесь
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container">
