added page with reccomend courses

--- a/html/courses.html
+++ b/html/courses.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </div>
-            <img src="../images/video.png" class="img-fluid" alt="video">
+            <img src="../images/video.png" class="img-fluid w-100 mb-4" alt="video">
         </div>
         <h1>Тарифы курса</h1>
         <div class="rates">
