--- a/html/courses.html
+++ b/html/courses.html
@@ -22,9 +22,12 @@
                     <img src="../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="d-flex">
+                    <a class="nav-link" id="enter" href="#">Войти</a>
+                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <img src="../images/toggleIcon.svg" alt="Toggle Icon">
+                    </button>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
@@ -211,21 +214,57 @@
     <div class="feedback">
         <div class="container">
             <h1><b>Отзывы</b></h1>
-            <div class="bodyFeedback">
-                <img src="../images/manWithComputerHalf.png" alt="Man with computer">
-                <div class="message">
-                    <div class="messageHeader">
-                        <h4>Иван Иванов</h4>
-                        <p>Графический дизайнер</p>
+            <div id="carouselFeedback" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselFeedback" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselFeedback" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <div class="bodyFeedback">
+                            <img src="../images/manWithComputerHalf.png" alt="Man with computer">
+                            <div class="message">
+                                <div class="messageHeader">
+                                    <h4>Иван Иванов</h4>
+                                    <p>Графический дизайнер</p>
+                                </div>
+                                <div class="messageText">
+                                    Работать дизайнером мне очень нравится,
+                                    а от курса я вообще в восторге. Отдельное спасибо хочу сказать куратору Александру за обратную связь, за то, что он очень подробно описывал недочеты и ошибки в дизайне. Спасибо!<br><br>
+                                    Работать дизайнером мне очень нравится,
+                                    а от курса я вообще в восторге. Отдельное спасибо хочу сказать куратору Александру за обратную связь, за то, что он очень подробно описывал недочеты и ошибки в дизайне. Спасибо!
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="messageText">
-                        Работать дизайнером мне очень нравится,
-                        а от курса я вообще в восторге. Отдельное спасибо хочу сказать куратору Александру за обратную связь, за то, что он очень подробно описывал недочеты и ошибки в дизайне. Спасибо!<br><br>
-
-                        Работать дизайнером мне очень нравится,
-                        а от курса я вообще в восторге. Отдельное спасибо хочу сказать куратору Александру за обратную связь, за то, что он очень подробно описывал недочеты и ошибки в дизайне. Спасибо!
+                    <div class="carousel-item" data-bs-interval="10000">
+                        <div class="bodyFeedback">
+                            <img src="../images/manWithComputerHalf.png" alt="Man with computer">
+                            <div class="message">
+                                <div class="messageHeader">
+                                    <h4>Иван Иванов</h4>
+                                    <p>Графический дизайнер</p>
+                                </div>
+                                <div class="messageText">
+                                    Работать дизайнером мне очень нравится,
+                                    а от курса я вообще в восторге. Отдельное спасибо хочу сказать куратору Александру за обратную связь, за то, что он очень подробно описывал недочеты и ошибки в дизайне. Спасибо!<br><br>
+                                    Работать дизайнером мне очень нравится,
+                                    а от курса я вообще в восторге. Отдельное спасибо хочу сказать куратору Александру за обратную связь, за то, что он очень подробно описывал недочеты и ошибки в дизайне. Спасибо!
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselFeedback" data-bs-slide="prev">
+
+                    <img src="../images/arrowPrev.svg" alt="Prev arrow">
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselFeedback" data-bs-slide="next">
+
+                    <img src="../images/arrowNext.svg" alt="Next Arrow">
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </div>
