--- a/html/userLesson.html
+++ b/html/userLesson.html
@@ -35,7 +35,7 @@
     </div>
     <div class="container">
         <div class="infoLesson">
-            <div class="headLessson">
+            <div class="headLesson">
                 <p>Урок 2</p>
                 <h1>Сторителлинг. Интро недели</h1>
                 <p>00:06:39</p>
