--- a/html/news.html
+++ b/html/news.html
@@ -18,9 +18,12 @@
                     <img src="../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="d-flex">
+                    <a class="nav-link" id="enter" href="#">Войти</a>
+                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <img src="../images/toggleIcon.svg" alt="Toggle Icon">
+                    </button>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
