--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../src/css/mainPage/news.css">
     <link rel="stylesheet" href="../src/css/feedback.css">
     <link rel="stylesheet" href="../src/css/contacts.css">
-    <link rel="import" href="./header.html">
+    <link rel="stylesheet" href="../src/css/footer.css">
     <title>Главная страница</title>
 </head>
 
@@ -294,11 +294,14 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
                         <div class="bodyFeedback">
-                            <img src="../images/manWithComputerHalf.png" alt="Man with computer">
+                            <img src="../images/manWithComputerHalf.png" class="bodyFeedbackImg" alt="Man with computer">
                             <div class="message">
                                 <div class="messageHeader">
-                                    <h4>Иван Иванов</h4>
-                                    <p>Графический дизайнер</p>
+                                    <img src="../images/avatar.png" alt="Avatar">
+                                    <div class="a">
+                                        <h4>Иван Иванов</h4>
+                                        <p>Графический дизайнер</p>
+                                    </div>
                                 </div>
                                 <div class="messageText">
                                     Работать дизайнером мне очень нравится,
@@ -311,11 +314,14 @@
                     </div>
                     <div class="carousel-item" data-bs-interval="10000">
                         <div class="bodyFeedback">
-                            <img src="../images/manWithComputerHalf.png" alt="Man with computer">
+                            <img src="../images/manWithComputerHalf.png" class="bodyFeedbackImg" alt="Man with computer">
                             <div class="message">
                                 <div class="messageHeader">
-                                    <h4>Иван Иванов</h4>
-                                    <p>Графический дизайнер</p>
+                                    <img src="../images/avatar.png" alt="Avatar">
+                                    <div class="messageHeaderText">
+                                        <h4>Иван Иванов</h4>
+                                        <p>Графический дизайнер</p>
+                                    </div>
                                 </div>
                                 <div class="messageText">
                                     Работать дизайнером мне очень нравится,
@@ -365,24 +371,51 @@
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
-                <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
-                    <li>EDUSTRUM</li>
-                    <li class="nav-item">
-                        +7 999 954-77-82 <br>
-                        pochta@gmail.com
-                    </li>
-                    <li><button type="button" name="button" class="socialButton">vk</button></li>
-                    <li><button type="button" name="button" class="socialButton">tg</button></li>
-                    <li><button type="button" name="button" class="socialButton">wa</button></li>
-                    <li class="nav-item">
-                        Политика <br> конфиденциальности
-                    </li>
-                </ul>
-            </div>
+                <div class="computerFooter">
+                    <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
+                        <li>EDUSTRUM</li>
+                        <li class="nav-item">
+                            +7 999 954-77-82 <br>
+                            pochta@gmail.com
+                        </li>
+                        <li><button type="button" name="button" class="socialButton">vk</button></li>
+                        <li><button type="button" name="button" class="socialButton">tg</button></li>
+                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                        <li class="nav-item">
+                            Политика <br> конфиденциальности
+                        </li>
+                    </ul>
+                </div>
+                <div class="mobileFooter">
+                    <div class="mt-3">
+                        EDUSTRUM
+                    </div>
+                    <div class="row  row-cols-sm-2   mt-3">
+                        <div class="col mb-3">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Главная</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Преимущества</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Курсы</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Политика конфиденциальности</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col mb-3">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Новости</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">О нас</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Контакты</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <ul class="nav justify-content-start flex-row mb-3 gap-4">
+                        <li><button type="button" name="button" class="socialButton">vk</button></li>
+                        <li><button type="button" name="button" class="socialButton">tg</button></li>
+                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                    </ul>
+                </div>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
