new folder auth fixed logo navbar

--- a/html/courses.html
+++ b/html/courses.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../src/css/feedback.css">
     <link rel="stylesheet" href="../src/css/contacts.css">
     <link rel="stylesheet" href="../src/css/footer.css">
+    <link rel="stylesheet" href="../src/css/nav.css">
     <title>Курс</title>
 </head>
 
