--- a/html/news.html
+++ b/html/news.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../src/css/news/main.css">
     <link rel="stylesheet" href="../src/css/buttons.css">
     <link rel="stylesheet" href="../src/css/footer.css">
+    <link rel="stylesheet" href="../src/css/nav.css">
 </head>
 
 <body>
