--- a/html/Auth/codeRegistration.html
+++ b/html/Auth/codeRegistration.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Вход</title>
+    <title>Код</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/signIn/main.css">
+    <link rel="stylesheet" href="../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../src/css/signIn/main.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logo.svg" alt="logo">
+                    <img src="../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profileButton">
-                            <img src="../images/profile.svg" alt="Profile">
+                            <img src="../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
@@ -34,23 +34,26 @@
         <div class="signInBlock">
             <div class="formSignIn">
                 <form>
-                    <legend class="mb-4">Придумайте пароль</legend>
+                    <legend class="mb-4">Войдите в свой профиль</legend>
                     <div class="mb-3">
-                        <input type="password" placeholder="Пароль" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" placeholder="Код-пароль" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-4">
-                        <input type="password" placeholder="Повторите пароль" class="form-control" id="exampleInputPassword1">
+                        На fkfkfkfj@gmail.com отправлено письмо с одноразовым код-паролем
                     </div>
-                    <button type="submit" class="buttonSignIn">Дальше</button>
+                    <button type="submit" class="buttonSignIn">Зарегистрироваться</button>
                     <div class="noRegistaration">
-                        или <u>войдите</u>
+                        При регистрации вы даете свое согласие на обработку персональных данных
+                    </div>
+                    <div class="mt-3">
+                        <u>назад</u>
                     </div>
                 </form>
             </div>
             <div class="blockWithImage">
                 <h1>Узнавайте новое c Edusturm</h1>
                 <p>Авторизуйтесь, чтобы начать заниматься</p>
-                <img src="../images/signInImage.png" alt="Idea">
+                <img src="../../images/signInImage.png" alt="Idea">
             </div>
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
