--- a/html/Auth/codeSignIn.html
+++ b/html/Auth/codeSignIn.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Код</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/signIn/main.css">
+    <link rel="stylesheet" href="../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../src/css/signIn/main.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logo.svg" alt="logo">
+                    <img src="../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profileButton">
-                            <img src="../images/profile.svg" alt="Profile">
+                            <img src="../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
             <div class="blockWithImage">
                 <h1>Узнавайте новое c Edusturm</h1>
                 <p>Авторизуйтесь, чтобы начать заниматься</p>
-                <img src="../images/signInImage.png" alt="Idea">
+                <img src="../../images/signInImage.png" alt="Idea">
             </div>
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
