changed carousel news

--- a/html/index.html
+++ b/html/index.html
@@ -213,60 +213,86 @@
     <div class="container">
         <div id="news">
             <h1><b>Новости</b></h1>
-            <div class="d-flex justify-content-center ">
-                <div id="carouselNews" class="carousel slide w-100" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="10000">
-                            <div class="card" style="width: 18rem;">
-                                <img src="../images/youngMan.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <p class="card-text">22 апреля, 2022</p>
-                                    <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
-                                    <a href="#">Читать подробнее...</a>
+            <div class="carouselNewsContainerUpper">
+                <div class="carouselNewsContainer">
+                    <div id="carouselNews" class="carousel" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../images/youngMan.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">22 апреля, 2022</p>
+                                        <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
+                                        <a href="#">Читать подробнее...</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../images/youngWoman.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">22 апреля, 2022</p>
+                                        <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
+                                        <a href="#">Читать подробнее...</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../images/youngMan.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">22 апреля, 2022</p>
+                                        <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
+                                        <a href="#">Читать подробнее...</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../images/youngMan.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">22 апреля, 2022</p>
+                                        <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
+                                        <a href="#">Читать подробнее...</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../images/youngMan.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <p class="card-text">22 апреля, 2022</p>
+                                        <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
+                                        <a href="#">Читать подробнее...</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item" data-bs-interval="10000">
-                            <div class="card" style="width: 18rem;">
-                                <img src="../images/youngWoman.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <p class="card-text">22 апреля, 2022</p>
-                                    <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
-                                    <a href="#">Читать подробнее...</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="10000">
-                            <div class="card" style="width: 18rem;">
-                                <img src="../images/youngMan.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <p class="card-text">22 апреля, 2022</p>
-                                    <h5 class="card-title">Почему стоит выбирать онлайн-школу?</h5>
-                                    <a href="#">Читать подробнее...</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselNews" data-bs-slide="prev">
-                        <img src="../images/arrowPrev.svg" alt="Prev arrow">
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselNews" data-bs-slide="next">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselNews" data-bs-slide="prev">
+                            <img src="../images/arrowPrev.svg" alt="Prev arrow">
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselNews" data-bs-slide="next">
 
-                        <img src="../images/arrowNext.svg" alt="Next Arrow">
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                            <img src="../images/arrowNext.svg" alt="Next Arrow">
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="about" id="about">
             <div class="textAbout">
-                <h1>О нас</h1>
+                <h1>
+                    <b>О нас</b>
+                </h1>
                 <p>
                     Мы учим людей с нуля осваивать программирование, веб-дизайн
                     и маркетинг. Проводим онлайн-курсы
@@ -415,8 +441,8 @@
                 </div>
         </footer>
     </div>
-    <script type="text/javascript" src="../src/js/multipleCarousel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../src/js/multipleCarousel.js"></script>
 </body>
 
 </html>
