--- a/html/courses.html
+++ b/html/courses.html
@@ -60,7 +60,7 @@
                 <div class="description">
                     Курс
                 </div>
-                <h1>Графический дизайнер с нуля до PRO</h1>
+                <h1><b>Графический дизайнер с нуля до PRO</b></h1>
                 <img src="../images/iconCourses.png" class="iconHeadCourseMobile" alt="Course icon">
                 <div class="description">
                     Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
@@ -86,7 +86,7 @@
                 Работа графическим дизайнером — это симбиоз творчества и функционального подхода. С помощью классных визуальных решений вы будете создавать графику, которая точно передаст характер бренда и поможет людям узнать компанию среди сотен
                 других.
             </div>
-            <h1>Кому подойдёт этот курс</h1>
+            <h1><b>Кому подойдёт этот курс</b></h1>
             <div class="usersCourse">
                 <div class="userCourse">
                     <img src="../images/profileUser.png" class="img-fluid w-5" alt="Profile">
@@ -107,7 +107,7 @@
             </div>
             <img src="../images/video.png" class="img-fluid w-100 mb-4" alt="video">
         </div>
-        <h1>Тарифы курса</h1>
+        <h1><b>Тарифы курса</b></h1>
         <div class="rates">
             <div class="rate">
                 <h2>Я сам</h2>
