--- a/html/news.html
+++ b/html/news.html
@@ -68,7 +68,7 @@
         </div>
         <img src="../images/newsFirstImg.png" class="img-fluid" alt="First Img">
         <div class="textNews">
-            <h1>Первые успехи
+            <h1><b>Первые успехи</b>
             </h1>
             Все началось в 1996 году. Аспиранты Стэнфордского университета Ларри Пейдж и Сергей Брин начали работу над собственным проектом поисковой системы. Сергей, к слову, уроженец Москвы. В 6 лет он с родителями переехал в штат Мэриленд, где его
             отец впоследствии занимался преподавательской деятельностью.<br><br>
